--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <option value="male">Laki-laki</option>
             <option value="female">Perempuan</option>
         </select>
-        <label class="block text-left text-blue-600 mb-2" for="telegram">Masukkan Nomor untuk medapatkan kode Verifikasi</label>
+        <label class="block text-left text-blue-600 mb-2" for="telegram">Masukkan Nomor telegram untuk medapatkan kode Verifikasi</label>
         <h1></h1>
         <h1></h1>
                 <div class="flex">
